# danda

./: Dockerfile  README.md  coming_soon.md  generate_docs.py  push_image.md  pyproject.toml
.github/workflows/: build-image.yml  generate_documentations.yml  publish.yml  python-app.yml
docs/: analysis.md  configuration.md  contributing.md  danda.md  danda_accessor.md  imputation.md  missinv_values_tasks.md  next_release.md  outliers.md  plugin_docu.txt  roadmap.md  tasks.md
docs/accessor/: analyze.md  clean.md  impute.md  optimize.md
docs/examples/: analyze.ipynb  clean.ipynb  handle_outliers.ipynb  impute_missing_values.ipynb  optimize.ipynb
docs/prompts/: accessor_code_to_generate_document.txt  csv.md  danda-prompt.txt
examples/: 1-clean.ipynb  11-analysis.ipynb  2-clean_all.ipynb  3-optimize.ipynb  4-danda_configuration.ipynb  5-anaysis.ipynb  6-sparse_rows.ipynb  7-sparse_columns.ipynb  8-suspicious_missing_values.ipynb  9-fill_empty_values.ipynb
examples/testing/: 1-titanic.ipynb  iris.ipynb
examples/testing/outlier/: diamonds.ipynb  handle_outliers.ipynb  houses.ipynb
src/danda/: __init__.py  accessor.py  cleaner.py  danda_action_accessor.py  io.py  plugin_documentation_generator.py  report_renderer.py
src/danda/plugins/: chain.py  (+2 more)
tests/: test_accessor.py  test_handle_outliers.py  test_plugin_documentation_generator.py  test_report_renderer.py
tests/configuration/: test_clean_plugins_disabled.py  test_config_section.py  test_danda_config.py  test_type_plugins_disabled.py
tests/plugins/: counter_plugin.py  exception_plugin.py  test_chain.py
(+61 files in other folders)
